src/passes/snapshots/lumina2__passes__cst_gen__test__expr__literal_int_0.snap
---
source: src/passes/cst_gen.rs
expression: "0"
---
Integer(
    IntegerLiteral(
        IntLit(
            0,
        ),
    ),
)
