src/passes/snapshots/lumina2__passes__cst_gen__test__expr__literal_int_1.snap
---
source: src/passes/cst_gen.rs
expression: "1"
---
Integer(
    IntegerLiteral(
        IntLit(
            1,
        ),
    ),
)
