src/passes/snapshots/lumina2__passes__cst_gen__test__expr__literal_int_123.snap
---
source: src/passes/cst_gen.rs
expression: "123"
---
Integer(
    IntegerLiteral(
        IntLit(
            123,
        ),
    ),
)
