src/passes/snapshots/lumina2__passes__cst_gen__test__expr__paren_ident.snap
---
source: src/passes/cst_gen.rs
expression: (some_ident)
---
Paren {
    tok_l_paren: LParen,
    expr: Variable(
        Variable {
            variable: Ident(
                "some_ident",
            ),
        },
    ),
    tok_r_paren: RParen,
}
