src/passes/snapshots/lumina2__passes__cst_gen__test__expr__paren_literal.snap
---
source: src/passes/cst_gen.rs
expression: (123)
---
Paren {
    tok_l_paren: LParen,
    expr: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    123,
                ),
            ),
        ),
    ),
    tok_r_paren: RParen,
}
