src/passes/snapshots/lumina2__passes__cst_gen__test__expr__unary_literal.snap
---
source: src/passes/cst_gen.rs
expression: "!2"
---
Unary {
    op: Not(
        Bang,
    ),
    value: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    2,
                ),
            ),
        ),
    ),
}
