src/passes/snapshots/lumina2__passes__cst_gen__test__expr__unary_variable.snap
---
source: src/passes/cst_gen.rs
expression: "-b"
---
Unary {
    op: Negative(
        Minus,
    ),
    value: Variable(
        Variable {
            variable: Ident(
                "b",
            ),
        },
    ),
}
